--- a/src/dyntext/Makefile-depend
+++ b/src/dyntext/Makefile-depend
@@ -24,6 +24,8 @@ $(OBJ)/dyntext.o: dyntext.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/comm.h ../include/utils.h ../include/handler.h \
-  ../include/db.h ../include/screen.h ../include/player_table.h
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/screen.h \
+  ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/dyntext.o
