--- a/src/flow_room/Makefile-depend
+++ b/src/flow_room/Makefile-depend
@@ -24,10 +24,11 @@ $(OBJ)/flow_room.o: flow_room.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/comm.h ../include/handler.h \
-  ../include/db.h ../include/flow_room.h ../include/vehicle.h \
-  ../include/smokes.h ../include/spells.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/bomb.h \
-  ../include/house.h ../include/fight.h ../include/events.h \
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/flow_room.h \
+  ../include/vehicle.h ../include/smokes.h ../include/spells.h \
+  ../include/char_class.h ../include/actions.h ../include/mobact.h \
+  ../include/bomb.h ../include/house.h ../include/fight.h \
   ../include/prog.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/flow_room.o
