--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -23,10 +23,11 @@ $(OBJ)/artisan.o: artisan.cc ../include/db.h ../include/defs.h \
   ../include/creature_list.h ../include/desc_data.h ../include/editor.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/account.h \
-  ../include/interpreter.h ../include/utils.h ../include/actions.h \
-  ../include/spells.h ../include/char_class.h ../include/mobact.h \
-  ../include/comm.h ../include/screen.h ../include/handler.h \
-  ../include/security.h ../include/vendor.h
+  ../include/interpreter.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/actions.h ../include/spells.h ../include/char_class.h \
+  ../include/mobact.h ../include/comm.h ../include/screen.h \
+  ../include/handler.h ../include/security.h ../include/vendor.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/cityguard.o: cityguard.cc ../include/creature.h \
   ../include/combat_data_list.h ../include/safe_list.h \
@@ -54,7 +55,8 @@ $(OBJ)/cityguard.o: cityguard.cc ../include/creature.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/account.h \
   ../include/interpreter.h ../include/house.h ../include/actions.h \
-  ../include/spells.h ../include/db.h ../include/comm.h \
+  ../include/spells.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
   ../include/fight.h ../include/handler.h ../include/utils.h \
   ../include/screen.h ../include/specs.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
@@ -84,8 +86,10 @@ $(OBJ)/guard.o: guard.cc ../include/actions.h ../include/interpreter.h \
   ../include/creature_list.h ../include/desc_data.h ../include/editor.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/account.h \
-  ../include/db.h ../include/comm.h ../include/fight.h \
-  ../include/handler.h ../include/utils.h ../include/screen.h
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/fight.h ../include/handler.h ../include/utils.h \
+  ../include/screen.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/mail.o: mail.cc ../include/actions.h ../include/interpreter.h \
   ../include/defs.h ../include/spells.h ../include/creature.h \
@@ -114,9 +118,10 @@ $(OBJ)/mail.o: mail.cc ../include/actions.h ../include/interpreter.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/account.h \
   ../include/utils.h ../include/comm.h ../include/db.h \
-  ../include/handler.h ../include/mail.h ../include/screen.h \
-  ../include/clan.h ../include/materials.h ../include/player_table.h \
-  ../include/accstr.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/handler.h \
+  ../include/mail.h ../include/screen.h ../include/clan.h \
+  ../include/materials.h ../include/player_table.h ../include/accstr.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/mobact.o: mobact.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -143,7 +148,8 @@ $(OBJ)/mobact.o: mobact.cc ../include/structs.h ../include/defs.h \
   ../include/account.h ../include/desc_data.h ../include/editor.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/utils.h ../include/db.h ../include/comm.h \
+  ../include/utils.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
   ../include/handler.h ../include/spells.h ../include/char_class.h \
   ../include/actions.h ../include/mobact.h ../include/vehicle.h \
   ../include/flow_room.h ../include/guns.h ../include/bomb.h \
@@ -176,8 +182,9 @@ $(OBJ)/vendor.o: vendor.cc ../include/actions.h ../include/interpreter.h \
   ../include/creature_list.h ../include/desc_data.h ../include/editor.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/account.h \
-  ../include/db.h ../include/comm.h ../include/handler.h \
-  ../include/screen.h ../include/utils.h ../include/vendor.h \
-  ../include/specs.h
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/handler.h ../include/screen.h ../include/utils.h \
+  ../include/vendor.h ../include/specs.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/artisan.o $(OBJ)/cityguard.o $(OBJ)/guard.o $(OBJ)/mail.o $(OBJ)/mobact.o $(OBJ)/vendor.o
