--- a/src/net/Makefile-depend
+++ b/src/net/Makefile-depend
@@ -24,7 +24,8 @@ $(OBJ)/ban.o: ban.cc ../include/structs.h ../include/defs.h ../include/macros.h 
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/comm.h ../include/handler.h \
-  ../include/db.h
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/comm.o: comm.cc ../include/macros.h ../include/structs.h \
   ../include/defs.h ../include/constants.h ../include/obj_data.h \
@@ -53,9 +54,10 @@ $(OBJ)/comm.o: comm.cc ../include/macros.h ../include/structs.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/spells.h ../include/utils.h ../include/comm.h \
   ../include/security.h ../include/screen.h ../include/handler.h \
-  ../include/db.h ../include/house.h ../include/vehicle.h \
-  ../include/help.h ../include/accstr.h ../include/player_table.h \
-  ../include/events.h ../include/prog.h
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/house.h \
+  ../include/vehicle.h ../include/help.h ../include/accstr.h \
+  ../include/player_table.h ../include/prog.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/gnetsys.o: gnetsys.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -82,7 +84,8 @@ $(OBJ)/gnetsys.o: gnetsys.cc ../include/structs.h ../include/defs.h \
   ../include/account.h ../include/desc_data.h ../include/editor.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/comm.h ../include/db.h ../include/utils.h \
+  ../include/comm.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
   ../include/spells.h ../include/handler.h ../include/mail.h \
   ../include/screen.h ../include/help.h ../include/char_class.h \
   ../include/actions.h ../include/mobact.h ../include/clan.h \
@@ -114,7 +117,8 @@ $(OBJ)/nanny.o: nanny.cc ../include/structs.h ../include/defs.h \
   ../include/account.h ../include/desc_data.h ../include/editor.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/comm.h ../include/db.h ../include/utils.h \
+  ../include/comm.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
   ../include/spells.h ../include/handler.h ../include/mail.h \
   ../include/screen.h ../include/help.h ../include/char_class.h \
   ../include/actions.h ../include/mobact.h ../include/clan.h \
