--- a/src/util/Makefile-depend
+++ b/src/util/Makefile-depend
@@ -23,7 +23,9 @@ $(OBJ)/accstr.o: accstr.cc ../include/interpreter.h ../include/defs.h \
   ../include/combat_data_list.h ../include/safe_list.h \
   ../include/account.h ../include/desc_data.h ../include/editor.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h ../include/db.h
+  ../include/zone_data.h ../include/ban.h ../include/db.h \
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/graph.o: graph.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -51,9 +53,10 @@ $(OBJ)/graph.o: graph.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/comm.h ../include/handler.h \
-  ../include/db.h ../include/spells.h ../include/vehicle.h \
-  ../include/fight.h ../include/char_class.h ../include/actions.h \
-  ../include/mobact.h ../include/accstr.h
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/vehicle.h ../include/fight.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/accstr.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/handler.o: handler.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -81,12 +84,13 @@ $(OBJ)/handler.o: handler.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/comm.h ../include/db.h \
-  ../include/handler.h ../include/spells.h ../include/screen.h \
-  ../include/vehicle.h ../include/vendor.h ../include/clan.h \
-  ../include/smokes.h ../include/materials.h ../include/login.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/help.h ../include/fight.h ../include/security.h \
-  ../include/flow_room.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/handler.h \
+  ../include/spells.h ../include/screen.h ../include/vehicle.h \
+  ../include/vendor.h ../include/clan.h ../include/smokes.h \
+  ../include/materials.h ../include/login.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/help.h \
+  ../include/fight.h ../include/security.h ../include/flow_room.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/memtrack.o: memtrack.cc ../include/memtrack.h ../include/utils.h \
   ../include/structs.h ../include/defs.h ../include/macros.h \
@@ -141,9 +145,10 @@ $(OBJ)/modify.o: modify.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/handler.h ../include/db.h \
-  ../include/comm.h ../include/spells.h ../include/mail.h \
-  ../include/boards.h ../include/login.h ../include/screen.h \
-  ../include/accstr.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/spells.h ../include/mail.h ../include/boards.h \
+  ../include/login.h ../include/screen.h ../include/accstr.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/random.o: random.cc
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
@@ -200,7 +205,9 @@ $(OBJ)/tmpstr.o: tmpstr.cc ../include/interpreter.h ../include/defs.h \
   ../include/combat_data_list.h ../include/safe_list.h \
   ../include/account.h ../include/desc_data.h ../include/editor.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h ../include/db.h
+  ../include/zone_data.h ../include/ban.h ../include/db.h \
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/utils.o: utils.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -229,7 +236,8 @@ $(OBJ)/utils.o: utils.cc ../include/structs.h ../include/defs.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/comm.h ../include/screen.h \
   ../include/spells.h ../include/handler.h ../include/security.h \
-  ../include/db.h ../include/char_class.h ../include/actions.h \
-  ../include/mobact.h
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/accstr.o $(OBJ)/graph.o $(OBJ)/handler.o $(OBJ)/memtrack.o $(OBJ)/modify.o $(OBJ)/random.o $(OBJ)/sight.o $(OBJ)/tmpstr.o $(OBJ)/utils.o
