--- a/src/interpreter/Makefile-depend
+++ b/src/interpreter/Makefile-depend
@@ -59,8 +59,7 @@ $(OBJ)/interpreter.o: interpreter.cc ../include/structs.h ../include/defs.h \
   ../include/screen.h ../include/help.h ../include/char_class.h \
   ../include/actions.h ../include/mobact.h ../include/clan.h \
   ../include/vehicle.h ../include/house.h ../include/login.h \
-  ../include/matrix.h ../include/bomb.h ../include/security.h \
-  ../include/prog.h
+  ../include/bomb.h ../include/security.h ../include/prog.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/security.o: security.cc /usr/include/libxml2/libxml/parser.h \
   /usr/include/libxml2/libxml/xmlversion.h \
