--- a/src/net/Makefile-depend
+++ b/src/net/Makefile-depend
@@ -90,7 +90,7 @@ $(OBJ)/gnetsys.o: gnetsys.cc ../include/structs.h ../include/defs.h \
   ../include/screen.h ../include/help.h ../include/char_class.h \
   ../include/actions.h ../include/mobact.h ../include/clan.h \
   ../include/vehicle.h ../include/house.h ../include/login.h \
-  ../include/matrix.h ../include/bomb.h
+  ../include/bomb.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/nanny.o: nanny.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -123,7 +123,7 @@ $(OBJ)/nanny.o: nanny.cc ../include/structs.h ../include/defs.h \
   ../include/screen.h ../include/help.h ../include/char_class.h \
   ../include/actions.h ../include/mobact.h ../include/clan.h \
   ../include/vehicle.h ../include/house.h ../include/login.h \
-  ../include/matrix.h ../include/bomb.h ../include/security.h \
-  ../include/quest.h ../include/player_table.h ../include/language.h
+  ../include/bomb.h ../include/security.h ../include/quest.h \
+  ../include/player_table.h ../include/language.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/ban.o $(OBJ)/comm.o $(OBJ)/gnetsys.o $(OBJ)/nanny.o
